// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render TodoList component correctly 1`] = `
<DocumentFragment>
  <div
    class="list-container"
  >
    <div>
      Todo Item Component
    </div>
    <div>
      Todo Item Component
    </div>
    <div>
      Todo Item Component
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render TodoList component correctly with empty list 1`] = `
<DocumentFragment>
  <div
    class="list-container"
  >
    <div
      class="list-empty"
    >
      Nothing Todo
    </div>
  </div>
</DocumentFragment>
`;
